# ocp-indent

./: .git-blame-ignore-revs  .gitignore  .ocp-indent  CHANGELOG  CHANGELOG.md  LICENSE  META  Makefile  Makefile.config  Makefile.config.in  Makefile.simple  README.md  _tags  configure  configure.ac  dune-project  emacs.el  install.sh  ocp-build.root  ocp-indent-nlfork.install  ocp-indent-nlfork.opam  ocp-indent.install  ocp-indent.opam  opam  uninstall.sh  version.ocp.in
.github/workflows/: main.yml
doc/: dune  jbuild  ocp-indent.md
man/man1/: ocp-indent.1
src/: Makefile.extracted-from-jenga  approx_common.mli  approx_lexer.mll  approx_tokens.ml  block.ml  block.mli  buildable_targets.list  compat.ml  config.ml  config.mli  dune  globals.ml.in  indentArgs.ml  indentArgs.mli  indentBlock.ml  indentBlock.mli  indentConfig.ml  indentConfig.mli  indentDynlink.dummy.ml  indentDynlink.real.ml  indentExtend.ml  indentExtend.mli  indentLoader.ml  indentLoader.mli  indentMain.ml  indentPrinter.ml  indentPrinter.mli  jbuild  main.ml  nstream.ml  nstream.mli  ocp-indent-lib.mllib  ocp-indent.ocp  pos.ml  pos.mli  reader.ml  reader.mli  simple_tokens.ml  streamer.ml  util.ml
src/ocaml_3/: compat.ml
src/ocp-indent/: dune  dune.inc  indentArgs.ml  indentArgs.mli  indentMain.ml
src/ocp-indent-dynlink/: dune  dune.inc  indentLoader.ml  indentLoader.mli
src/ocp-indent-gen-rules/: dune  dune.inc  main.ml
src/ocp-indent-lexer/: approx_lexer.mll  approx_tokens.ml  dune  dune.inc  indentExtend.ml  indentExtend.mli
src/ocp-indent-lib/: dune  dune.inc  indentBlock.ml  indentBlock.mli  indentConfig.ml  indentConfig.mli  indentPrinter.ml  indentPrinter.mli
src/ocp-indent-utils/: dune  dune.inc  nstream.ml  nstream.mli  pos.ml  pos.mli  util.ml
tests/: .gitignore  Makefile  core-failing.ml  core-passing.ml  core.ml  failing.html  js-and.ml  js-andand.ml  js-args.ml  js-bind.ml  js-comment.ml  js-functor.ml  js-let.ml  js-pipebang.ml  js-poly.ml  js-sexp.ml  js-test.ml  module.ml  partial.mlp  pattern.ml  semisemi.ml  test.sh
tests/failing/: README.md  bracket.ml  cinaps.ml  core-failing.ml  dune  edge-cases.ml  escaped-nl.ml  escaped-nl.ml.ref  escaped-nl.t  exprs.ml  extensible.ml  indent-empty-1.ml  indent-empty-nm.ml.ref  indent-empty.ml.ref  js-2018.ml  js-args.ml  js-args.t  js-begin.ml  js-begin.t  js-bench.ml  js-comment.ml  js-comment.ml.ref  js-comment1.ml  js-comment1.ml.ref  js-default.ml  js-fun.ml  js-fun.t  js-functor.ml  js-functor.t  js-let.ml  js-list.ml  js-low-priority.ml  js-pattern.ml  js-pattern.t  js-poly.ml  js-record.ml  js-record.t  js-syntax.t  js-test.ml  js-to-do.ml  (+30 more)
tests/failing-output/: alignment.ml  bracket.ml  cinaps.ml  comments.ml  core-failing.ml  core-passing.ml  edge-cases.ml  escaped-nl.ml  exprs.ml  extensible.ml  gadt.ml  indent-empty-nm.ml  indent-empty.ml  js-2018.ml  js-args.ml  js-begin.ml  js-bench.ml  js-comment.ml  js-comment1.ml  js-default.ml  js-fun.ml  js-functor.ml  js-label.ml  js-let.ml  js-list.ml  js-low-priority.ml  js-pattern.ml  js-pipebang.ml  js-ppx-struct.ml  js-record.ml  js-test.ml  js-to-do.ml  js-try.ml  js-type.ml  lexer.mll  lwt.ml  match_fun.ml  misc-2018.ml  misc-2019.ml  module.ml  (+27 more)
tests/inplace/: dune  run.t
tests/ocp-indent-gen-rules/: run.t
tests/passing/: alignment.ml  alignment.t  bracket.ml  bracket.t  cinaps.t  comments.ml  comments.t  core-failing.ml  core-failing.t  core-passing.ml  core-passing.t  edge-cases.ml  edge-cases.t  effect_syntax.t  embedded-match.ml  embedded-match.t  escaped-nl.ml  exprs.ml  exprs.t  extensible.t  gadt.ml  gadt.t  ifand.ml  ifand.t  indent-empty-1.t  indent-empty-nm.ml  indent-empty-nm.t  indent-empty.ml.ref  indent-empty.t  issue-306-cinaps-nested-list-records.t  issue-310-TEST-identifier.t  js-2018.t  js-and.t  js-andand.t  js-applicative.t  js-args.ml  js-begin.ml  js-bench.t  js-bind.ml  js-bind.t  (+118 more)
tools/: diff2html  dune  jbuild  ocp-indent.el  ocp-indent.vim  tuareg-indent
