opam-version: "2.0"
name: "ocp-indent-nlfork"
version: "1.5.4"
maintainer: "contact@ocamlpro.com"
authors: [
  "Grégoire Henry <gregoire.henry@ocamlpro.com>"
  "Louis Gesbert <louis.gesbert@ocamlpro.com>"
  "Thomas Gazagnaire <thomas@gazagnaire.org>"
  "Jun Furuse"
]
homepage: "http://www.typerex.org/ocp-indent.html"
bug-reports: "https://github.com/OCamlPro/ocp-indent/issues"
license: "LGPL-3.0-or-later"
tags: ["org:ocamlpro" "org:typerex"]
dev-repo: "git+https://github.com/OCamlPro/ocp-indent.git#nlfork"
build: ["dune" "build" "-j" jobs "-p" name]
depends: [
  ("ocaml" {>= "4.04.2" & < "5.0"} | "ocaml" {>= "5.0"} & "base-bytes")
  "dune"
  "cmdliner" {>= "1.0.0"}
]
synopsis: """ocp-indent library, "newline tokens" fork"""
description: """
This is a modified version of the ocp-indent library, which is based on a
different lexer, using newline tokens and banning multi-line ones, which is more
convenient for some applications.

The library is exported as `ocp-indent-nlfork`, so as not to interfere with
canonical ocp-indent installations.

This package does *not* install an ocp-indent binary or related tools."""
