(library
 (name ocp_indent_dynlink)
 (public_name ocp-indent.dynlink)
 (wrapped false)
 (libraries findlib dynlink ocp-indent.lexer ocp-indent.utils))

;; Auto indent files with `dune build @fmt`

(subdir
 run
 (dynamic_include ../rules/dune.ocp-indent))

(subdir
 rules
 (rule
  (deps
   (glob_files ../*.{ml,mli}))
  (target dune.ocp-indent)
  (action
   (run ocp-indent-gen-rules -o %{target}))))
