(include dune.inc)

(rule
 (deps
  (glob_files *.{ml,mli}))
 (action
  (with-stdout-to
   dune.inc.gen
   (run ocp-indent-gen-rules))))

(rule
 (alias indent)
 (action
  (diff dune.inc dune.inc.gen)))

(ocamllex approx_lexer)

(library
 (name ocp_indent_lexer)
 (public_name ocp-indent.lexer)
 (wrapped false))
