(ocamllex approx_lexer)

(library
 (name ocp_indent_lexer)
 (public_name ocp-indent.lexer)
 (wrapped false))

;; Auto indent files with `dune build @fmt`

(subdir
 run
 (dynamic_include ../rules/dune.ocp-indent))

(subdir
 rules
 (rule
  (deps
   (glob_files ../*.{ml,mli}))
  (target dune.ocp-indent)
  (action
   (run ocp-indent-gen-rules --ignore approx_lexer.ml -o %{target}))))
