(include dune.inc)

(rule
 (deps
  (glob_files *.{ml,mli}))
 (action
  (with-stdout-to
   dune.inc.gen
   (run ocp-indent-gen-rules))))

(rule
 (alias indent)
 (action
  (diff dune.inc dune.inc.gen)))

(library
 (name ocp_indent_lib)
 (wrapped false)
 (public_name ocp-indent.lib)
 (libraries ocp-indent.utils)
 (flags :standard -w -9 -warn-error -57))
