(library
 (name ocp_indent_lib)
 (wrapped false)
 (public_name ocp-indent.lib)
 (libraries ocp-indent.utils)
 (flags :standard -w -9 -warn-error -57))

;; Auto indent files with `dune build @indent`

(subdir
 run
 (dynamic_include ../rules/dune.ocp-indent))

(subdir
 rules
 (rule
  (deps
   (glob_files ../*.{ml,mli}))
  (action
   (with-stdout-to
    dune.ocp-indent
    (run ocp-indent-gen-rules)))))
