(library
 (name ocp_indent_utils)
 (public_name ocp-indent.utils)
 (wrapped false)
 (libraries ocp-indent.lexer))

;; Auto indent files with `dune build @indent`

(subdir
 run
 (dynamic_include ../rules/dune.ocp-indent))

(subdir
 rules
 (rule
  (deps
   (glob_files ../*.{ml,mll,mli}))
  (action
   (with-stdout-to
    dune.ocp-indent
    (run ocp-indent-gen-rules)))))
