(rule
 (targets indentVersion.ml)
 (action
  (with-stdout-to %{targets}
    (echo "let version = \"%{version:ocp-indent}\"")))
)

(executable
 (name indentMain)
 (public_name ocp-indent)
 (modules indentVersion indentArgs indentMain)
 (libraries cmdliner ocp-indent.lexer ocp-indent.lib ocp-indent.dynlink unix)
 (flags :standard -w -9)
)
